# G4_DEMAND

./: CMakeLists.txt  CollarEfficiencyComparison.ods  DEMAND.cc  config-demand-xyz.mac  config-demand.mac  config-rb87an.mac  config-reaction.mac  config-single-det.mac  config.mac  pterp.cc  run-geant3.mac  run-ne22an.mac  run-reaction.mac  run.mac
include/: DemandActionInitialization.hh  DemandAnalysis.hh  DemandDetectorConstruction.hh  DemandDetectorMessenger.hh  DemandEventAction.hh  DemandHit.hh  DemandPrimaryGeneratorAction.hh  DemandPrimaryGeneratorMessenger.hh  DemandRunAction.hh  DemandRunMessenger.hh  DemandSD.hh  DemandSteppingAction.hh  PterpActionInitialization.hh  PterpAnalysis.hh  PterpDetectorConstruction.hh  PterpDetectorMessenger.hh  PterpEventAction.hh  PterpHit.hh  PterpPrimaryGeneratorAction.hh  PterpPrimaryGeneratorMessenger.hh  PterpRunAction.hh  PterpSD.hh  PterpSteppingAction.hh
include/g4gen/: BeamEmittance.hh  Error.hh  NeutronDecay.hh  NuclearMasses.hh  Particle.hh  PhaseSpace.hh  ReactionGenerator.hh  ReactionKinematics.hh  Rng.hh
src/: DemandActionInitialization.cc  DemandAnalysis.cc  DemandDetectorConstruction.cc  DemandDetectorMessenger.cc  DemandEventAction.cc  DemandHit.cc  DemandPrimaryGeneratorAction.cc  DemandPrimaryGeneratorMessenger.cc  DemandRunAction.cc  DemandRunMessenger.cc  DemandSD.cc  DemandSteppingAction.cc  PterpActionInitialization.cc  PterpAnalysis.cc  PterpDetectorConstruction.cc  PterpDetectorMessenger.cc  PterpEventAction.cc  PterpHit.cc  PterpPrimaryGeneratorAction.cc  PterpPrimaryGeneratorMessenger.cc  PterpRunAction.cc  PterpSD.cc  PterpSteppingAction.cc
src/g4gen/: BeamEmittance.cc  NeutronDecay.cc  NuclearMasses.cc  Particle.cc  PhaseSpace.cc  ReactionGenerator.cc  ReactionKinematics.cc  Rng.cc
src/rootfiles/: 22neag_4_9T_filtered.root  RemoveNoneReactions.C  nohup.out
